Fixed a problem with the movie info becoming the same color as the background and overflow hiding several movies.

--- a/browse.css
+++ b/browse.css
@@ -10,6 +10,7 @@
 html {
     scroll-behavior: smooth;
     background-color: #2c2c2c;
+    overflow-x: hidden;
 }
 
 li {
@@ -212,26 +213,34 @@ nav {
 }
 
 .decor {
-    background-color: #272727;
+    background-color: #f7f7f7;
     min-height: 650px;
 }
 
 .movies--wrapper {
-    padding: 16px 16px;
+    padding: 24px 16px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
 .movie {
-    background-color: rgb(245, 245, 245);
-    max-width: calc(31.66%);
+    background-color: #2e6853;
+    max-width: calc(30%);
     width: 100%;
-    padding: 18px;
-    margin-bottom: 26px;
+    padding: 12px 12px;
+    margin-bottom: 56px;
     display: flex;
     flex-direction: column;
     transition: all 300ms ease;
+}
+
+.movie__info:nth-child(2) {
+    padding: 12px 0 1px 0;
+}
+
+.movie__info {
+    padding: 1px 0;
 }
 
 .movie:hover {
@@ -244,14 +253,30 @@ nav {
     padding: 12px 24px;
 }
 
-.loading__visible {
-    display: flex;
-    z-index: 1;
+.loading {
+    background-color: #4aa584;
+    height: 4px;
+    width: 100%;
+    display: none;
 }
 
-.loading {
-    background
-    height: 100%;
-    width: 100%;
-    z-index: -1;
+.loading-animation {
+    background-color: #2e6853;
+    width: calc(50%);
+    height: 4px;
+    animation: left-to-right 2500ms infinite;
+    display: none;
+}
+
+.loading__visible {
+    display: flex;
+}
+
+@keyframes left-to-right {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(220%);
+    }
 }
